[gd_scene load_steps=27 format=3 uid="uid://q502awmo8ato"]

[ext_resource type="Material" uid="uid://bu51bywbbo0u2" path="res://Effect/Shader/dissolve/dissolve.tres" id="1_3sesk"]
[ext_resource type="Texture2D" uid="uid://bkdkds3yu4tqa" path="res://Assests/sprite/AX/dialogue/dialogue.png" id="1_g23he"]
[ext_resource type="Script" path="res://Scripts/system/dialogue_base.gd" id="1_pnvi7"]
[ext_resource type="Script" path="res://Scripts/system/DialogueResource.gd" id="2_umtsr"]
[ext_resource type="Script" path="res://Scripts/system/DialogueTextResource.gd" id="3_f4lll"]
[ext_resource type="FontFile" uid="uid://cfukh65rhbo36" path="res://Assests/font/gufeng/ChillHuoSong_F_Bold.otf" id="6_gx8ej"]
[ext_resource type="Texture2D" uid="uid://blwtfdi1vjgfa" path="res://Assests/sprite/AX/dialogue/ax_illust_idle_sprite_sheet_0927.png" id="7_n28wo"]

[sub_resource type="Resource" id="Resource_3s3v0"]
script = ExtResource("3_f4lll")
speaker_entity = "AX"
speaker_img_Hframes = 1
speaker_img_rest_frame = 0
text = "Do you like 玩游戏"
text_speed = 5.0
text_volume_db = 0
text_volume_pitch_min = 0.85
text_volume_pitch_max = 1.15
camera_position = Vector2(999, 999)
camera_transition_time = 1.0

[sub_resource type="Resource" id="Resource_baxvt"]
script = ExtResource("3_f4lll")
speaker_entity = ""
speaker_img_Hframes = 1
speaker_img_rest_frame = 0
text = "Oh Yes Sir!!"
text_speed = 5.0
text_volume_db = 0
text_volume_pitch_min = 0.85
text_volume_pitch_max = 1.15
camera_position = Vector2(999, 999)
camera_transition_time = 1.0

[sub_resource type="AtlasTexture" id="AtlasTexture_432uo"]
atlas = ExtResource("7_n28wo")
region = Rect2(0, 0, 667, 667)

[sub_resource type="AtlasTexture" id="AtlasTexture_vxh8i"]
atlas = ExtResource("7_n28wo")
region = Rect2(667, 0, 667, 667)

[sub_resource type="AtlasTexture" id="AtlasTexture_ejeph"]
atlas = ExtResource("7_n28wo")
region = Rect2(1334, 0, 667, 667)

[sub_resource type="AtlasTexture" id="AtlasTexture_4bv50"]
atlas = ExtResource("7_n28wo")
region = Rect2(2001, 0, 667, 667)

[sub_resource type="AtlasTexture" id="AtlasTexture_w207x"]
atlas = ExtResource("7_n28wo")
region = Rect2(2668, 0, 667, 667)

[sub_resource type="AtlasTexture" id="AtlasTexture_5rt07"]
atlas = ExtResource("7_n28wo")
region = Rect2(3335, 0, 667, 667)

[sub_resource type="AtlasTexture" id="AtlasTexture_q2sio"]
atlas = ExtResource("7_n28wo")
region = Rect2(4002, 0, 667, 667)

[sub_resource type="AtlasTexture" id="AtlasTexture_m7hsj"]
atlas = ExtResource("7_n28wo")
region = Rect2(4669, 0, 667, 667)

[sub_resource type="AtlasTexture" id="AtlasTexture_qf3ka"]
atlas = ExtResource("7_n28wo")
region = Rect2(0, 667, 667, 667)

[sub_resource type="AtlasTexture" id="AtlasTexture_enndj"]
atlas = ExtResource("7_n28wo")
region = Rect2(667, 667, 667, 667)

[sub_resource type="AtlasTexture" id="AtlasTexture_m8n1d"]
atlas = ExtResource("7_n28wo")
region = Rect2(1334, 667, 667, 667)

[sub_resource type="AtlasTexture" id="AtlasTexture_wadb0"]
atlas = ExtResource("7_n28wo")
region = Rect2(2001, 667, 667, 667)

[sub_resource type="AtlasTexture" id="AtlasTexture_iof3b"]
atlas = ExtResource("7_n28wo")
region = Rect2(2668, 667, 667, 667)

[sub_resource type="AtlasTexture" id="AtlasTexture_igeew"]
atlas = ExtResource("7_n28wo")
region = Rect2(3335, 667, 667, 667)

[sub_resource type="AtlasTexture" id="AtlasTexture_fx0ut"]
atlas = ExtResource("7_n28wo")
region = Rect2(4002, 667, 667, 667)

[sub_resource type="AtlasTexture" id="AtlasTexture_aofhv"]
atlas = ExtResource("7_n28wo")
region = Rect2(4669, 667, 667, 667)

[sub_resource type="SpriteFrames" id="SpriteFrames_8vbb1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_432uo")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_vxh8i")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_ejeph")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_4bv50")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w207x")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_5rt07")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_q2sio")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_m7hsj")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_qf3ka")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_enndj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m8n1d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wadb0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iof3b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_igeew")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fx0ut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aofhv")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[node name="Dialogue" type="Node2D"]
position = Vector2(543, 513)
script = ExtResource("1_pnvi7")
dialogue = Array[ExtResource("2_umtsr")]([SubResource("Resource_3s3v0"), SubResource("Resource_baxvt")])

[node name="back_sprite" type="Sprite2D" parent="."]
material = ExtResource("1_3sesk")
position = Vector2(-7.00002, -48)
scale = Vector2(0.75, 0.713969)
texture = ExtResource("1_g23he")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -657.0
offset_top = -914.0
offset_right = 736.0
offset_bottom = 242.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.191
anchor_top = 0.557
anchor_right = 0.868
anchor_bottom = 0.973
offset_left = 98.937
offset_top = 145.108
offset_right = -244.124
offset_bottom = -90.7881

[node name="VBoxContainer" type="VBoxContainer" parent="Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="RichTextLabel" type="RichTextLabel" parent="Control/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(600, 200)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_fonts/normal_font = ExtResource("6_gx8ej")
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "EXAMPLE"
scroll_active = false
visible_characters_behavior = 1

[node name="botton_container" type="HBoxContainer" parent="Control/HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="SpeakerParent" type="AnimatedSprite2D" parent="Control/HBoxContainer"]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="illustrate" type="AnimatedSprite2D" parent="."]
position = Vector2(467, -117)
scale = Vector2(0.75, 0.75)
sprite_frames = SubResource("SpriteFrames_8vbb1")
frame = 10
frame_progress = 0.739785
